--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,6 @@
         }
     },
     "require": {
-        "phpunit/phpunit": "^9.2",
-        "mockery/mockery": "^1.4"
+        "phpunit/phpunit": "~5"
     }
 }
